# mobile-push-kafka

./: .gitignore  README.md  architecture.xml  docker-compose.yml  messageflow.xml
golang/: Dockerfile  go.mod
golang/producer/: .dockerignore  .gitignore  Dockerfile  go.mod  go.sum  main.go
golang/producer/cmd/: root.go  server.go  version.go
golang/producer/desktop/: producerdesktop.go
golang/producer/locales/en-US/: message.yml
golang/producer/server/: server.go
golang/producer/server/controller/: producercontroller.go
golang/producer/server/dto/: pushmessage.go
golang/producer/server/repository/: producerrepository.go
golang/producer/server/service/: producerservice.go
golang/restserver/: go.mod  go.sum  server.go
golang/restserver/framework/: basecontroller.go  baserepository.go  baseservice.go  basicserver.go  serverdate.go  servererror.go  serverutils.go
golang/restserver/framework/cmd/: root.go  server.go  version.go
java/producer/: .gitignore  build.gradle  settings.gradle
java/producer/src/main/java/br/com/dynamiclight/: ProducerApplication.java
java/producer/src/main/resources/: application.yml  log4j2.yml
java/producer/src/test/java/br/com/dynamiclight/: ProducerApplicationTests.java
kafka/: Dockerfile
kotlin/producer/: build.gradle.kts  settings.gradle.kts
kotlin/producer/src/main/resources/: application.yml  log4j2.yml
prometheus/: prometheus.yml
rust/producer/: .gitignore  Cargo.toml
rust/producer/src/: main.rs  server.rs
rust/producer/src/httpserver/: controller.rs  kafka.rs  mod.rs  route.rs  server.rs
(+10 files in other folders)
