[package]
name = "producer"
version = "0.1.0"
authors = ["Kenniston Arraes Bonfim <kenniston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
clap = "2.33.3"
actix-web = "3.3.2"
env_logger = "0.8.3"
gelf = "0.5.0"
log = "0.4.14"
log4rs = "0.8.3"
log4rs-gelf = "0.1.4"
serde = { version = "1.0.123", features = ["derive"] }
serde_gelf = "0.1.6"
serde_json = "1.0.64"
json = "0.12.4"
rdkafka = "0.26.0"
